--- a/Lesson09b-ToDo-List-AAC/T09b.01-Exercise-CreateEntity/app/build.gradle
+++ b/Lesson09b-ToDo-List-AAC/T09b.01-Exercise-CreateEntity/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.1'
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.example.android.todolist"
         minSdkVersion 15
@@ -19,6 +19,10 @@ android {
 }
 
 dependencies {
+    // ViewModel and LiveData
+    implementation "android.arch.lifecycle:extensions:1.0.0"
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:27.0.2'
 
@@ -28,7 +32,9 @@ dependencies {
     //FAB dependencies
     compile 'com.android.support:design:27.0.2'
 
-    // TODO (1) Add room dependencies
+    //  Room dependencies
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 
     //Testing
     // Instrumentation dependencies use androidTestCompile
