--- a/Lesson11-Completeing-The-UI/T11.01-Exercise-ConstraintLayout/app/build.gradle
+++ b/Lesson11-Completeing-The-UI/T11.01-Exercise-ConstraintLayout/app/build.gradle
@@ -1,15 +1,17 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         applicationId "com.example.android.boardingpass"
-        minSdkVersion 10
-        targetSdkVersion 25
+        minSdkVersion 14
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
@@ -21,7 +23,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    // TODO (1) Add the compile dependency for the constraint layout support library
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    // Done (1) Add the compile dependency for the constraint layout support library
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
